# iClinicapp

./: .gitignore  README.md  Relacao_empresas.json  main.py  pyproject.toml  test,py  test2.py  verify.json
source/: api.py  controleexames.py  funcoes.py  main.py  routes.py
source/Interfaces/: Login_interface.py  agendamento.py  cadastro.py  contab.py  documentos.py  empresas.py  exames_prontos.py  gerarDoc.py  layout.py  main_interface.py  relacoes.py  sidebar.py  telaresize.py
source/database/: databasecache.py  datacreator.py  models.py
src/core/: api.py  layout.py  routes.py  sidebar.py
src/database/: databasecache.py  datacreator.py  models.py
src/functions/: funcs.py
src/pages/AccountingPage/: interface.py
src/pages/AppointmentsPage/: interface.py
src/pages/Billing/: interface.py
src/pages/CompaniesPage/: interface.py
src/pages/CreateExamPage/: interface.py
src/pages/GeneratedExamsPage/: interface.py
src/pages/HomePage/: interface.py
src/pages/LoginPage/: interface.py
src/pages/RegisterPage/: interface.py
src/pages/Relations/: interface.py
src/pages/RelationsPage/: interface.py
src/pages/goingPage/: interface.py
src/pages/goingPage/Jsons/: ANAMNESE.json  ASO.json  AUDIOMETRIA.json
src/utils/: controleexames.py  telaresize.py
